Removing getAll endpoint
