# src/main/java/com/patterns/cache/controller/CacheAsideController.java
@@ -6,8 +6,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.List;
-
 @RestController
 @RequestMapping("/products")
 @RequiredArgsConstructor
@@ -18,12 +16,6 @@ public class CacheAsideController {
     @GetMapping("/{id}")
     public ResponseEntity<ProductResponse> getProductCacheAside(@PathVariable Long id) {
         ProductResponse response = service.getProductCacheAside(id);
-        return ResponseEntity.ok(response);
-    }
-
-    @GetMapping("/")
-    public ResponseEntity<List<ProductResponse>> getAllProductsCacheAside() {
-        List<ProductResponse> response = service.getAllProductsCacheAside();
         return ResponseEntity.ok(response);
     }
 }
